--- a/adminpage.html
+++ b/adminpage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/dataTables.bootstrap5.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Frontendfunn - Bootstrap 5 Admin Dashboard Template</title>
+    <title>Admin Page</title>
 </head>
 
 <body>
