added empolyee page and made modifications

--- a/Home.html
+++ b/Home.html
@@ -130,7 +130,7 @@
     <header>
         <nav class="navbar navbar-light bg-light fixed-top">
             <div class="container-fluid">
-                <i class="fa-solid fa-building-columns"> Musee De Louvre</i>
+                <i class="fa-solid fa-landmark"> Musee De Louvre</i>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#home">Home</a>
@@ -142,7 +142,7 @@
                         <a class="nav-link" href="#feedback">Feedback</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link login" href="./staffpage.html">Staff-only</a>
+                        <a class="nav-link login" href="./staffhomepage.html">Staff-only</a>
                     </li>
                 </ul>
 
