--- a/staffhomepage.html
+++ b/staffhomepage.html
@@ -315,6 +315,8 @@
                             if (loginUserName == 'admin') {
 
                                 location.href = './adminpage.html';
+                            } else {
+                                location.href = "./employeepage.html";
                             }
                         }
 
